<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/baseline_insert_chart_outlined_24"
            android:title="@string/menu_charts" />
        <item
            android:id="@+id/nav_insertNewActivity"
            android:icon="@drawable/outline_format_list_bulleted_24"
            android:title="Manage activity list"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/menu_info" />

        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_launcher_background"
            android:title="List" />

        <item
            android:id="@+id/addFragment"
            android:icon="@drawable/ic_launcher_background"
            android:title="Add" />

    </group>
</menu>