<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.personalphysicaltracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addActivity"
            app:destination="@id/addActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_charts"
        android:name="com.example.personalphysicaltracker.ui.gallery.GalleryFragment"
        android:label="@string/menu_charts"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.personalphysicaltracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.personalphysicaltracker.data.fragments.list.ListFragment"
        android:label="fragment_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.personalphysicaltracker.data.fragments.add.AddFragment"
        android:label="fragment_add"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/addActivity"
        android:name="com.example.personalphysicaltracker.AddActivityFragment"
        android:label="fragment_add_activity"
        tools:layout="@layout/fragment_add_activity" >
        <action
            android:id="@+id/action_addActivity_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>